# mrs_uav_controllers

./: .clang-format  .gitignore  .gitmodules  .mergify.yml  .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  attitude_controller.xml  controller_plugins.xml  failsafe_controller.xml  lsf_controller.xml  nsf_controller.xml  package.xml  pid_controller.xml  plugins.xml  so3_controller.xml
.catkin_tools/profiles/default/: config.yaml
.ci/: build.sh  ci_before_install.sh  ci_test_build.sh  deploy_key_github.enc  install.sh
.github/workflows/: main.yml  melodic.yml  noetic.yml  ros_build_test.yml  ros_package_build.yml
cfg/: Settings.cfg  acceleration_controller.cfg  acceleration_gains.cfg  attitude_controller.cfg  attitude_gains.cfg  lsf_gains.cfg  mpc_controller.cfg  mpc_gains.cfg  nsf_controller.cfg  nsf_gains.cfg  partial_landing_controller.cfg  pid_gains.cfg  se3_controller.cfg  so3_controller.cfg  so3_gains.cfg
config/: lsf_simulation.yaml  pid_simulation.yaml
config/default/: acceleration.yaml  attitude.yaml  emergancy.yaml  emergency.yaml  failsafe.yaml  midair_activation.yaml  motor.yaml  mpc.yaml  nsf.yaml  partial_landing.yaml  se3.yaml  so3.yaml
config/f450/: failsafe.yaml  lsf.yaml  pid.yaml
config/f550/: failsafe.yaml  lsf.yaml  pid.yaml
config/private/: emergency_controller.yaml  failsafe_controller.yaml  mpc_controller.yaml  se3_controller.yaml
config/public/: failsafe_controller.yaml  mpc_controller.yaml  se3_controller.yaml
config/simulation/: failsafe.yaml  lsf.yaml
config/simulation/big_dofec/: motor_params_default.yaml  mpc.yaml
config/simulation/brus/: mpc.yaml
config/simulation/coppelia_quad/: motor_params_default.yaml
config/simulation/eaglemk2/: acceleration.yaml  attitude.yaml  motor_params_default.yaml  mpc.yaml
config/simulation/f330/: motor_params_default.yaml
config/simulation/f450/: motor.yaml  motor_params_default.yaml
config/simulation/f550/: acceleration.yaml  attitude.yaml  lsf.yaml  motor_params.yaml  motor_params_default.yaml  mpc.yaml  nsf.yaml  pid.yaml  so3.yaml
include/: common.h  mpc_controller.h  mpc_controller_solver.h  pid.hpp  pid_controller.h
include/mpc_controller/: cvx_wrapper.h
include/mrs_controllers/: cvx_wrapper.h
include/mrs_uav_controllers/: cvx_wrapper.h
include/solver/: solver.h
msg/: debug.msg
old/: package.xml_old
old/test/: compile_tests.sh  gather_coverage.sh
old/test/failsafe_controller/: CMakeLists.txt  failsafe_controller.test  test.cpp
old/test/failsafe_controller/config/hw_api/: hw_api_actuators.yaml  hw_api_velocity_hdg.yaml
scripts/: get_public_params.py
src/: common.cpp  failsafe_controller.cpp  midair_activation_controller.cpp  mpc_controller.cpp  pid_controller.cpp  se3_controller.cpp
src/acceleration_controller/: acceleration_controller.cpp
src/attitude_controller/: attitude_controller.cpp
src/cvx_wrapper/: cvx_wrapper.cpp
src/failsafe_controller/: failsafe_controller.cpp
src/log/: latest_list
src/lsf_controller/: lsf_controller.cpp
src/midair_activation_controller/: midair_activation_controller.cpp
src/motor_controller/: motor_controller.cpp
src/mpc_controller/: cvx_wrapper.cpp  cvx_wrapper_x.cpp  cvx_wrapper_y.cpp  mpc_controller.cpp
src/nsf_controller/: nsf_controller.cpp
src/partial_landing_controller/: partial_landing_controller.cpp
src/pid_controller/: pid_controller.cpp
src/se3_controller/: se3_controller.cpp
src/so3_controller/: so3_controller.cpp
test/: CMakeLists.txt  all_tests.sh  compile_tests.sh  coverage.sh  run_specific_test.sh  run_tests.sh  single_test.sh
test/failsafe_controller/: CMakeLists.txt  failsafe_controller.test  test.cpp  test.py
test/failsafe_controller/config/hw_api/: hw_api_acceleration_hdg.yaml  hw_api_acceleration_hdg_rate.yaml  hw_api_actuators.yaml  hw_api_attitude_rate.yaml
test/failsafe_controller/modalities/: failsafe_controller_modalities_acceleration_hdg.test  failsafe_controller_modalities_acceleration_hdg_rate.test  failsafe_controller_modalities_actuators.test  failsafe_controller_modalities_attitude.test  failsafe_controller_modalities_attitude_rate.test  failsafe_controller_modalities_control_group.test  failsafe_controller_modalities_velocity_hdg.test  failsafe_controller_modalities_velocity_hdg_rate.test  test.cpp
test/failsafe_controller/modalities/config/: hw_api_acceleration_hdg.yaml  simulator.yaml
test/failsafe_controller/modalities/launch/: mrs_uav_system.launch
test/modalities/: CMakeLists.txt  modalities.test  test.cpp  test.py
test/modalities/config/: network_config.yaml  world_config.yaml
test/modalities/config/hw_api/: hw_api_acceleration_hdg_rate.yaml  hw_api_attitude.yaml  hw_api_control_group.yaml  hw_api_position.yaml  hw_api_velocity_hdg.yaml  hw_api_velocity_hdg_rate.yaml
test/modalities/launch/: mrs_uav_system.launch
test/mpc_controller/modalities/: mpc_controller_modalities_acceleration_hdg.test  mpc_controller_modalities_acceleration_hdg_rate.test  mpc_controller_modalities_actuators.test  mpc_controller_modalities_attitude.test  mpc_controller_modalities_attitude_rate.test  mpc_controller_modalities_control_group.test  mpc_controller_modalities_position.test  mpc_controller_modalities_velocity_hdg.test  mpc_controller_modalities_velocity_hdg_rate.test  test.cpp
test/mpc_controller/modalities/config/: custom_config.yaml  hw_api_attitude_rate.yaml  hw_api_position.yaml
test/mpc_controller/modalities/launch/: mrs_uav_system.launch
test/se3_controller/modalities/: se3_controller_modalities_acceleration_hdg.test  se3_controller_modalities_acceleration_hdg_rate.test  se3_controller_modalities_actuators.test  se3_controller_modalities_attitude.test  se3_controller_modalities_attitude_rate.test  se3_controller_modalities_control_group.test  se3_controller_modalities_position.test  se3_controller_modalities_velocity_hdg.test  se3_controller_modalities_velocity_hdg_rate.test
test/se3_controller/modalities/config/: custom_config.yaml  hw_api_attitude.yaml
test/se3_controller/modalities/launch/: mrs_uav_system.launch
(+135 files in other folders)
