<?xml version="1.0"?>
<package format="2">

  <name>mrs_uav_controllers</name>
  <version>1.0.1</version>
  <description>The mrs_uav_controllers package</description>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>cmake_modules</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_uav_managers</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>mrs_lib</depend>

  <export>
    <mrs_uav_managers plugin="${prefix}/plugins.xml" />
  </export>

</package>
